deployments/k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: hue
  labels:
    app.kubernetes.io/part-of: hue
    pod-security.kubernetes.io/enforce: restricted
    pod-security.kubernetes.io/audit: restricted
