deployments/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: hue
  namespace: hue
  labels:
    app.kubernetes.io/name: hue
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: hue
  ports:
    - name: https
      port: 443
      targetPort: 8443
      appProtocol: https
      protocol: TCP
